[package]
name = "limo-web3-dns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnet = "2.8.0"
async-trait = "0.1.73"
ethers = "2.0.10"
nom = "7.1.3"
once_cell = "1.18.0"
punycode = "0.4.1"
tokio = { version = "1.32.0", features = ["full"] }
multiaddr = "0.18.0"
clap = { version = "4.4.7", features = ["derive", "env"] }
url = "2.4.1"
